syntax = "proto3";

package cloud.lazycat.apis;

option go_package = "/browseronly";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// this service is provied by frontend server, backend code shouldn't use it.
service BrowserOnlyProxy {
  // 查询当前登陆用户对应信息
  rpc QuerySessionInfo(google.protobuf.Empty) returns (SessionInfo) {}

  // 查询当前访问的lzcapp对应信息
  rpc QueryAppInfo(google.protobuf.Empty) returns (AppInfo) {}

  // 对devices.proto:_PairAllDeivces的自动封装
  rpc PairAllDevices(google.protobuf.Empty) returns (stream google.protobuf.Empty) {}

  rpc QueryAPIServerInfo(google.protobuf.Empty) returns (APIServerInfo) {}
}

message APIServerInfo {
  string frontend_version = 1;
  string backend_version = 2;
}

message SessionInfo {
  string uid = 1;

  string device_id = 2;

  google.protobuf.Timestamp when = 3;
}

message AppInfo {
  string box_id = 1;
  string app_id = 2;
  string app_domain = 3;
}